--- a/views/greet.erb
+++ b/views/greet.erb
@@ -1,1 +1,10 @@
 <%# Write your code here! %>
+<!DOCTYPE html>
+<html>
+  <head>Greeting</head>
+  <body>
+    <form>
+      
+    </form>
+  </body>
+</html>
