Automatically backed up by Learn

--- a/views/greet.erb
+++ b/views/greet.erb
@@ -4,7 +4,8 @@
   <head>Greeting</head>
   <body>
     <form>
-      
+      <input type='text' name='username'>
+      <input type='submit'>
     </form>
   </body>
 </html>
