--- a/views/greet.erb
+++ b/views/greet.erb
@@ -4,7 +4,7 @@
   <head>Greeting</head>
   <body>
     <form>
-      <input type='text' name='username'>
+      <input type='text' name='user_name'>
       <input type='submit'>
     </form>
   </body>
