--- a/views/greet.erb
+++ b/views/greet.erb
@@ -3,6 +3,7 @@
 <html>
   <head>Greeting</head>
   <body>
-    <% "Hi #{params[:user_name]}, nice to meet you!" %>
+    <!--<% "Hi #{params[:user_name]}, nice to meet you!" %>-->
+    <h1>Hey!</h1>
   </body>
 </html>
