--- a/views/greet.erb
+++ b/views/greet.erb
@@ -1,9 +1,5 @@
 <%# Write your code here! %>
 <!DOCTYPE html>
 <html>
-  <head>Greeting</head>
-  <body>
-    <!--<% "Hi #{params[:user_name]}, nice to meet you!" %>-->
-    <h1>Hey!</h1>
-  </body>
+  <h1>Hi <%= params[:user_name] %>, nice to meet you!</h1>
 </html>
